WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223311
webgl/1.0.x/conformance/context/constants-and-properties.html fails
https://bugs.webkit.org/show_bug.cgi?id=223311
Summary
webgl/1.0.x/conformance/context/constants-and-properties.html fails
Kimmo Kinnunen
Reported
2021-03-16 23:29:16 PDT
webgl/1.0.4/conformance/context/constants-and-properties.html fails
Attachments
Patch
(2.95 KB, patch)
2021-09-03 04:53 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(3.71 KB, patch)
2021-09-03 04:55 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(4.36 KB, patch)
2021-09-03 05:24 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch
(33.59 KB, patch)
2021-09-03 11:39 PDT
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2021-03-17 01:45:40 PDT
At least macOS 11.3, iMacPro1,1, Radeon Pro Vega 56
Radar WebKit Bug Importer
Comment 2
2021-03-23 23:30:14 PDT
<
rdar://problem/75772425
>
Kimmo Kinnunen
Comment 3
2021-09-03 04:53:43 PDT
Created
attachment 437262
[details]
Patch
Kimmo Kinnunen
Comment 4
2021-09-03 04:55:05 PDT
Created
attachment 437263
[details]
Patch
Kimmo Kinnunen
Comment 5
2021-09-03 05:24:41 PDT
Created
attachment 437264
[details]
Patch
Kimmo Kinnunen
Comment 6
2021-09-03 11:39:18 PDT
Created
attachment 437289
[details]
Patch
Antti Koivisto
Comment 7
2021-09-06 00:34:38 PDT
Comment on
attachment 437289
[details]
Patch rs=me
EWS
Comment 8
2021-09-06 00:54:33 PDT
Committed
r282053
(
241353@main
): <
https://commits.webkit.org/241353@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437289
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug