webgl/1.0.x/conformance/context/constants-and-properties.html fails https://bugs.webkit.org/show_bug.cgi?id=223311 <rdar://problem/75772425>

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-09-06
Reviewed by Antti Koivisto.

Source/WebCore:

Remove STENCIL_INDEX, it was removed from the spec 2017.

Fixes tests:
webgl/1.0.x/conformance/context/constants-and-properties.html
webgl/2.0.y/conformance2/context/constants-and-properties-2.html

* html/canvas/WebGLRenderingContextBase.idl:
* platform/graphics/GraphicsContextGL.h:

LayoutTests:

* TestExpectations:
Mark the skipped tests as Pass until all 1.0.x/2.0.y tests
are unskipped.
Skip the 2.0.0/1.0.3 test that is invalid now.
* fast/canvas/webgl/constants-on-interface.html: Removed.
* fast/canvas/webgl/constants.html: Removed.
Remove failing tests that serve the same purpose.
They seem to, according to best effort inspection, test
the same properties.

Canonical link: https://commits.webkit.org/241353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282053 268f45cc-cd09-0410-ab3c-d52691b4dbfc